--- a/clase_t_4.ipynb
+++ b/clase_t_4.ipynb
@@ -1,5 +1,485 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2b4936df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train</th>\n",
+       "      <th>age</th>\n",
+       "      <th>educ</th>\n",
+       "      <th>black</th>\n",
+       "      <th>hisp</th>\n",
+       "      <th>married</th>\n",
+       "      <th>earn96</th>\n",
+       "      <th>unem96</th>\n",
+       "      <th>earn98</th>\n",
+       "      <th>unem98</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>37</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.617924</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   train  age  educ  black  hisp  married  earn96  unem96    earn98  unem98\n",
+       "0      0   37    11      1     0        1     0.0       1  1.617924       0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import pyreadstat as st\n",
+    "path = r\"C:\\Users\\HP\\OneDrive\\Escritorio\\David Guzzi\\DiTella\\MEC\\Materias\\2025\\2025 2T\\[MT08-MT13] Microeconometría II\\Clases\\Stata\\jobtraining.dta\"\n",
+    "\n",
+    "df, meta = st.read_dta(path)\n",
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6d3588c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1130, 10)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "68a0788e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from dataclasses import dataclass\n",
+    "from typing import List, Optional, Literal, Dict, Any\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "import statsmodels.api as sm\n",
+    "from scipy.stats import norm\n",
+    "\n",
+    "@dataclass\n",
+    "class NNMatchResult:\n",
+    "    estimand: str\n",
+    "    coef: float\n",
+    "    se: float\n",
+    "    z: float\n",
+    "    p: float\n",
+    "    ci_low: float\n",
+    "    ci_high: float\n",
+    "    n: int\n",
+    "    matches_summary: Dict[str, Any]\n",
+    "\n",
+    "def _whiten_mahalanobis(X: np.ndarray) -> np.ndarray:\n",
+    "    \"\"\"Devuelve X transformada tal que la distancia euclídea en Z es Mahalanobis en X.\"\"\"\n",
+    "    V = np.cov(X, rowvar=False)\n",
+    "    VI = np.linalg.inv(V)\n",
+    "    # Cholesky de VI: VI = U @ U.T  ->  ||U.T (x - y)||^2 = (x - y)' VI (x - y)\n",
+    "    U = np.linalg.cholesky(VI)\n",
+    "    Z = X @ U  # Euclídea en Z equivale a Mahalanobis en X\n",
+    "    return Z\n",
+    "\n",
+    "def nnmatch(\n",
+    "    df: pd.DataFrame,\n",
+    "    y: str,\n",
+    "    t: str,\n",
+    "    x: List[str],\n",
+    "    *,\n",
+    "    estimand: Literal[\"ATE\", \"ATT\"] = \"ATE\",\n",
+    "    n_neighbors: int = 1,\n",
+    "    metric: Literal[\"mahalanobis\"] = \"mahalanobis\",\n",
+    "    bias_adj: bool = True,\n",
+    "    se_type: Literal[\"HC1\", \"bootstrap\"] = \"HC1\",\n",
+    "    bootstrap: Optional[int] = None,\n",
+    "    random_state: Optional[int] = 2025,\n",
+    "    return_matches: bool = False,\n",
+    ") -> NNMatchResult | tuple[NNMatchResult, pd.DataFrame]:\n",
+    "    \"\"\"\n",
+    "    Nearest-Neighbor Matching al estilo Stata teffects nnmatch, por defecto:\n",
+    "      - 1 vecino, Mahalanobis, con reemplazo\n",
+    "      - estimand = 'ATE' (o 'ATT')\n",
+    "      - ajuste de sesgo post-matching con OLS en la muestra emparejada\n",
+    "      - SE robustos (HC1). Opcional: bootstrap=B\n",
+    "    \"\"\"\n",
+    "    # --- 0) limpieza básica\n",
+    "    d = df[[y, t] + x].dropna().copy()\n",
+    "    d[t] = d[t].astype(int)\n",
+    "    n = len(d)\n",
+    "\n",
+    "    # --- 1) preparar matrices\n",
+    "    X = d[x].to_numpy(dtype=float)\n",
+    "    T = d[t].to_numpy(dtype=int)\n",
+    "    Y = d[y].to_numpy(dtype=float)\n",
+    "\n",
+    "    # --- 2) transformar a espacio euclídeo equivalente a Mahalanobis\n",
+    "    if metric != \"mahalanobis\":\n",
+    "        raise ValueError(\"Por ahora solo se implementa 'mahalanobis'.\")\n",
+    "    Z = _whiten_mahalanobis(X)\n",
+    "\n",
+    "    # --- 3) separar tratados/controles y ajustar NNs\n",
+    "    treat_idx = np.where(T == 1)[0]\n",
+    "    ctrl_idx  = np.where(T == 0)[0]\n",
+    "\n",
+    "    Z_t = Z[treat_idx]\n",
+    "    Z_c = Z[ctrl_idx]\n",
+    "    Y_t = Y[treat_idx]\n",
+    "    Y_c = Y[ctrl_idx]\n",
+    "\n",
+    "    # Para cada tratado: vecino(s) control más cercano\n",
+    "    nn_c = NearestNeighbors(n_neighbors=n_neighbors, algorithm=\"auto\").fit(Z_c)\n",
+    "    dist_tc, nbrs_tc = nn_c.kneighbors(Z_t, return_distance=True)\n",
+    "\n",
+    "    # Para ATE, también matcheamos controles -> tratados\n",
+    "    if estimand == \"ATE\":\n",
+    "        nn_t = NearestNeighbors(n_neighbors=n_neighbors, algorithm=\"auto\").fit(Z_t)\n",
+    "        dist_ct, nbrs_ct = nn_t.kneighbors(Z_c, return_distance=True)\n",
+    "\n",
+    "    # --- 4) construir muestra emparejada\n",
+    "    # Usaremos un \"panel\" emparejado donde cada fila es una observación real con su \"match outcome\" del grupo opuesto.\n",
+    "    # Para ATT: solo promediamos sobre tratados; para ATE: sobre todos.\n",
+    "\n",
+    "    # índices de matches (usamos 1-NN por default; si >1, promediamos)\n",
+    "    def _avg_match_values(base_idx, other_idx_map, Y_other):\n",
+    "        # base_idx: índices de la submuestra (tratados o controles) en el conjunto original\n",
+    "        # other_idx_map: matriz idx de vecinos (en subíndice de la submuestra opuesta)\n",
+    "        # Y_other: outcomes del grupo opuesto\n",
+    "        # Retorna vector del tamaño de base_idx con el promedio de Y de los vecinos\n",
+    "        if other_idx_map.ndim == 1:\n",
+    "            return Y_other[other_idx_map]\n",
+    "        else:\n",
+    "            return Y_other[other_idx_map].mean(axis=1)\n",
+    "\n",
+    "    # Tratados: matched control outcome\n",
+    "    match_c_idx_sub = nbrs_tc[:, 0] if n_neighbors == 1 else nbrs_tc\n",
+    "    Yc_matched_for_t = _avg_match_values(treat_idx, match_c_idx_sub, Y_c)\n",
+    "\n",
+    "    if estimand == \"ATE\":\n",
+    "        # Controles: matched treated outcome\n",
+    "        match_t_idx_sub = nbrs_ct[:, 0] if n_neighbors == 1 else nbrs_ct\n",
+    "        Yt_matched_for_c = _avg_match_values(ctrl_idx, match_t_idx_sub, Y_t)\n",
+    "\n",
+    "    # --- 5) preparar DataFrame para regresión post-matching (bias adjustment)\n",
+    "    # Para ATT: usamos solo tratados + sus controles matcheados (dos \"bandas\")\n",
+    "    # Para ATE: usamos tratados con sus controles emparejados y controles con sus tratados emparejados\n",
+    "    rows = []\n",
+    "\n",
+    "    # banda de tratados (observación real)\n",
+    "    for pos, i in enumerate(treat_idx):\n",
+    "        rows.append({\n",
+    "            \"Y\": Y[i],\n",
+    "            \"T\": 1,\n",
+    "            **{k: d.iloc[i][k] for k in x},\n",
+    "            \"_unit\": i,\n",
+    "            \"_group\": \"treated_real\"\n",
+    "        })\n",
+    "        # banda de control \"match\" sintético para el mismo tratado (mismo X del real? No: registramos el real del control emparejado)\n",
+    "        j_ctrl = ctrl_idx[match_c_idx_sub[pos]] if n_neighbors == 1 else ctrl_idx[match_c_idx_sub[pos][0]]\n",
+    "        rows.append({\n",
+    "            \"Y\": Yc_matched_for_t[pos],\n",
+    "            \"T\": 0,\n",
+    "            **{k: d.iloc[j_ctrl][k] for k in x},\n",
+    "            \"_unit\": j_ctrl,\n",
+    "            \"_group\": \"control_match_for_treated\"\n",
+    "        })\n",
+    "\n",
+    "    if estimand == \"ATE\":\n",
+    "        # banda de controles y su match tratado\n",
+    "        for pos, j in enumerate(ctrl_idx):\n",
+    "            rows.append({\n",
+    "                \"Y\": Y[j],\n",
+    "                \"T\": 0,\n",
+    "                **{k: d.iloc[j][k] for k in x},\n",
+    "                \"_unit\": j,\n",
+    "                \"_group\": \"control_real\"\n",
+    "            })\n",
+    "            i_treat = treat_idx[match_t_idx_sub[pos]] if n_neighbors == 1 else treat_idx[match_t_idx_sub[pos][0]]\n",
+    "            rows.append({\n",
+    "                \"Y\": Yt_matched_for_c[pos],\n",
+    "                \"T\": 1,\n",
+    "                **{k: d.iloc[i_treat][k] for k in x},\n",
+    "                \"_unit\": i_treat,\n",
+    "                \"_group\": \"treated_match_for_control\"\n",
+    "            })\n",
+    "\n",
+    "    matched_df = pd.DataFrame(rows)\n",
+    "\n",
+    "    # --- 6) estimación: post-matching OLS (bias_adj=True)\n",
+    "    # Coeficiente de T ~ ATE/ATT ajustado por X en la muestra emparejada\n",
+    "    if bias_adj:\n",
+    "        Xreg = sm.add_constant(matched_df[[\"T\"] + x])\n",
+    "        res = sm.OLS(matched_df[\"Y\"].to_numpy(), Xreg).fit(cov_type=\"HC1\")\n",
+    "        coef = res.params[\"T\"]\n",
+    "        se = res.bse[\"T\"]\n",
+    "    else:\n",
+    "        # Sin ajuste: diferencia emparejada simple\n",
+    "        if estimand == \"ATT\":\n",
+    "            att_simple = (Y_t - Yc_matched_for_t).mean()\n",
+    "            coef = float(att_simple)\n",
+    "        else:\n",
+    "            # ATE simple: promedio simétrico\n",
+    "            diff_t = (Y_t - Yc_matched_for_t).mean()\n",
+    "            diff_c = (Yt_matched_for_c - Y_c).mean()\n",
+    "            coef = float(0.5*diff_t + 0.5*diff_c)\n",
+    "        # SE por delta simple no es trivial; recomiendo bootstrap si sin ajuste\n",
+    "        se = np.nan\n",
+    "\n",
+    "    # --- 7) Bootstrap opcional para SE\n",
+    "    if se_type == \"bootstrap\" or (bootstrap is not None and bootstrap > 0):\n",
+    "        B = int(bootstrap or 500)\n",
+    "        rng = np.random.default_rng(random_state)\n",
+    "        boot = []\n",
+    "        for _ in range(B):\n",
+    "            # re-muestreo por unidad original (no por filas del matched_df para evitar doblar probas)\n",
+    "            samp_idx = np.arange(n)\n",
+    "            samp = rng.choice(samp_idx, size=n, replace=True)\n",
+    "            d_b = d.iloc[samp].reset_index(drop=True)\n",
+    "            try:\n",
+    "                res_b = nnmatch(\n",
+    "                    d_b, y, t, x,\n",
+    "                    estimand=estimand, n_neighbors=n_neighbors,\n",
+    "                    metric=metric, bias_adj=bias_adj,\n",
+    "                    se_type=\"HC1\", bootstrap=None, random_state=None, return_matches=False\n",
+    "                )\n",
+    "                boot.append(res_b.coef)\n",
+    "            except Exception:\n",
+    "                # puede fallar si la covarianza no es invertible; saltamos esa réplica\n",
+    "                continue\n",
+    "        if len(boot) >= 10:\n",
+    "            se = float(np.std(boot, ddof=1))\n",
+    "        else:\n",
+    "            # si no pudimos bootstrapiar suficiente, dejamos el SE HC1\n",
+    "            pass\n",
+    "\n",
+    "    # --- 8) estadísticos\n",
+    "    z = coef / se if (se is not None and np.isfinite(se) and se > 0) else np.nan\n",
+    "    p = 2*(1 - norm.cdf(abs(z))) if np.isfinite(z) else np.nan\n",
+    "    ci_low = coef - 1.96*se if np.isfinite(se) else np.nan\n",
+    "    ci_high = coef + 1.96*se if np.isfinite(se) else np.nan\n",
+    "\n",
+    "    # --- 9) resumen de matching\n",
+    "    match_summary = {\n",
+    "        \"n_obs\": n,\n",
+    "        \"n_treated\": int((T == 1).sum()),\n",
+    "        \"n_control\": int((T == 0).sum()),\n",
+    "        \"neighbors\": n_neighbors,\n",
+    "        \"metric\": metric,\n",
+    "        \"mean_dist_t_to_c\": float(dist_tc.mean()) if 'dist_tc' in locals() else None,\n",
+    "    }\n",
+    "    if estimand == \"ATE\" and 'dist_ct' in locals():\n",
+    "        match_summary[\"mean_dist_c_to_t\"] = float(dist_ct.mean())\n",
+    "\n",
+    "    result = NNMatchResult(\n",
+    "        estimand=estimand,\n",
+    "        coef=float(coef),\n",
+    "        se=float(se),\n",
+    "        z=float(z) if np.isfinite(z) else np.nan,\n",
+    "        p=float(p) if np.isfinite(p) else np.nan,\n",
+    "        ci_low=float(ci_low) if np.isfinite(ci_low) else np.nan,\n",
+    "        ci_high=float(ci_high) if np.isfinite(ci_high) else np.nan,\n",
+    "        n=n,\n",
+    "        matches_summary=match_summary\n",
+    "    )\n",
+    "\n",
+    "    if return_matches:\n",
+    "        return result, matched_df\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2c0735fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NNMatchResult(estimand='ATE', coef=1.5369651104230515, se=0.2518237220648781, z=6.1033372782373485, p=1.0387630755559485e-09, ci_low=1.0433906151758905, ci_high=2.0305396056702127, n=1130, matches_summary={'n_obs': 1130, 'n_treated': 376, 'n_control': 754, 'neighbors': 1, 'metric': 'mahalanobis', 'mean_dist_t_to_c': 0.16856989690402338, 'mean_dist_c_to_t': 0.3753011393873344})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = nnmatch(df, y=\"earn98\", t=\"train\", x=[\"earn96\", \"age\", \"educ\"],\n",
+    "              estimand=\"ATE\", n_neighbors=1, metric=\"mahalanobis\",\n",
+    "              bias_adj=True, se_type=\"HC1\", bootstrap=None)\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3c0c820a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "SIN ajuste de sesgo (bias_adj=False):\n",
+      "\n",
+      "Treatment Effect Estimates: Matching\n",
+      "\n",
+      "                     Est.       S.e.          z      P>|z|      [95% Conf. int.]\n",
+      "--------------------------------------------------------------------------------\n",
+      "           ATE      1.494      0.571      2.614      0.009      0.374      2.614\n",
+      "           ATC      1.289      0.716      1.801      0.072     -0.114      2.693\n",
+      "           ATT      1.903      0.497      3.832      0.000      0.930      2.877\n",
+      "\n",
+      "\n",
+      "CON ajuste de sesgo (bias_adj=True):\n",
+      "\n",
+      "Treatment Effect Estimates: Matching\n",
+      "\n",
+      "                     Est.       S.e.          z      P>|z|      [95% Conf. int.]\n",
+      "--------------------------------------------------------------------------------\n",
+      "           ATE      2.394      0.566      4.226      0.000      1.284      3.504\n",
+      "           ATC      2.609      0.709      3.681      0.000      1.220      3.998\n",
+      "           ATT      1.962      0.495      3.963      0.000      0.992      2.932\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from causalinference import CausalModel\n",
+    "\n",
+    "df = pd.read_stata(r\"C:\\Users\\HP\\OneDrive\\Escritorio\\David Guzzi\\DiTella\\MEC\\Materias\\2025\\2025 2T\\[MT08-MT13] Microeconometría II\\Clases\\Stata\\jobtraining.dta\")\n",
+    "\n",
+    "Y = df[\"earn98\"].to_numpy()\n",
+    "D = df[\"train\"].astype(int).to_numpy()\n",
+    "X = df[[\"earn96\", \"age\", \"educ\"]].to_numpy()\n",
+    "\n",
+    "# --- Sin ajuste de sesgo (equivale a omitir biasadj() en Stata)\n",
+    "cm_noadj = CausalModel(Y=Y, D=D, X=X)\n",
+    "cm_noadj.est_via_matching(weights=\"maha\", matches=10, bias_adj=False)\n",
+    "print(\"\\nSIN ajuste de sesgo (bias_adj=False):\")\n",
+    "print(cm_noadj.estimates[\"matching\"])\n",
+    "\n",
+    "# --- Con ajuste de sesgo (equivale a biasadj(earn96 age educ))\n",
+    "cm_adj = CausalModel(Y=Y, D=D, X=X)\n",
+    "cm_adj.est_via_matching(weights=\"maha\", matches=10, bias_adj=True)\n",
+    "print(\"\\nCON ajuste de sesgo (bias_adj=True):\")\n",
+    "print(cm_adj.estimates[\"matching\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b99830cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1130"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = df[[\"earn98\",\"train\",\"earn96\",\"age\",\"educ\"]].dropna()\n",
+    "len(d)  # debería ser 1130"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bf30d23b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empates (tratados): min 1 max 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.spatial import distance\n",
+    "\n",
+    "X = d[[\"earn96\",\"age\",\"educ\"]].to_numpy()\n",
+    "V = np.cov(X, rowvar=False)\n",
+    "VI = np.linalg.inv(V)\n",
+    "\n",
+    "tmask = d[\"train\"].astype(int).to_numpy()==1\n",
+    "Xt, Xc = X[tmask], X[~tmask]\n",
+    "\n",
+    "# Para cada tratado, contar cuántos controles están a la distancia mínima (tolerancia numérica eps)\n",
+    "eps = 1e-12\n",
+    "tie_counts = []\n",
+    "for x in Xt:\n",
+    "    dists = np.array([distance.mahalanobis(x, xc, VI) for xc in Xc])\n",
+    "    mind = dists.min()\n",
+    "    ties = np.sum(np.isclose(dists, mind, atol=eps, rtol=0))\n",
+    "    tie_counts.append(ties)\n",
+    "\n",
+    "print(\"Empates (tratados): min\", np.min(tie_counts), \"max\", np.max(tie_counts))\n"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
