--- a/clase_t_7.ipynb
+++ b/clase_t_7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "1d8040b6",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "0  1  1  5   1     0    0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,6 +66,146 @@
     "\n",
     "df, meta = st.read_dta(path)\n",
     "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9ac1ea10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Fixed Effects (within) — LSDV (statsmodels, constante centrada como Stata) ===\n",
+      "       Coefficient  Std. Err.     T-stat   P-value  Lower CI  Upper CI\n",
+      "_cons          5.0   0.395285  12.649111  0.006192  3.299227  6.700773\n",
+      "dit           -3.5   1.118034  -3.130495  0.088678 -8.310512  1.310512\n",
+      "post           0.5   0.790569   0.632456  0.591752 -2.901546  3.901546\n",
+      "\n",
+      "R² (within): 0.8809523810\n",
+      "\n",
+      "F-test that all u_i = 0 (poolability):\n",
+      "F(3, 2) = 8.1333   P-value = 0.1115\n",
+      "\n",
+      "Resumen rápido:\n",
+      "Obs = 8 | Grupos (i) = 4 | Obs/grupo (avg) = 2.0\n",
+      "F(modelo within; 2, 6) = 22.2000   Prob > F = 0.0017\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\HP\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:418: UserWarning: `kurtosistest` p-value may be inaccurate with fewer than 20 observations; only n=8 observations were given.\n",
+      "  return hypotest_fun_in(*args, **kwds)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Solo statsmodels (+ patsy para fórmula, scipy para t-crit)\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import statsmodels.api as sm\n",
+    "import patsy\n",
+    "from scipy.stats import t as tdist\n",
+    "\n",
+    "# ============================================================\n",
+    "# Asumo que ya existe un DataFrame `df` con columnas:\n",
+    "# i, t, y, post, dit  (tu 'st' no se usa si ya tienes 'dit')\n",
+    "# ============================================================\n",
+    "\n",
+    "# ---------- 1) Chequeos y preparación ----------\n",
+    "req = {\"i\",\"t\",\"y\",\"post\",\"dit\"}\n",
+    "missing = req - set(df.columns)\n",
+    "if missing:\n",
+    "    raise ValueError(f\"Faltan columnas: {missing}\")\n",
+    "\n",
+    "d = df.copy()\n",
+    "d[[\"i\",\"t\"]] = d[[\"i\",\"t\"]].astype(int)\n",
+    "for c in [\"y\",\"post\",\"dit\"]:\n",
+    "    d[c] = pd.to_numeric(d[c], errors=\"coerce\")\n",
+    "\n",
+    "# ---------- 2) LSDV: y ~ dit + post + C(i) (constante incluida) ----------\n",
+    "# Algebraicamente equivalente a FE con intercepto\n",
+    "y_lsdv, X_lsdv = patsy.dmatrices(\"y ~ dit + post + C(i)\", d, return_type=\"dataframe\")\n",
+    "ols_lsdv = sm.OLS(y_lsdv, X_lsdv).fit()   # var clásica (como xtreg, fe sin vce(robust))\n",
+    "\n",
+    "# ---------- 3) Constante \"estilo Stata\": ybar - xbar' * beta ----------\n",
+    "xbars = d[[\"dit\", \"post\"]].mean()\n",
+    "beta = ols_lsdv.params[[\"dit\", \"post\"]]\n",
+    "cons_stata = float(d[\"y\"].mean() - np.dot(xbars.values, beta.values))\n",
+    "\n",
+    "# Desvío estándar de _cons: sigma_e / sqrt(G)\n",
+    "G = d[\"i\"].nunique()\n",
+    "sigma_e = float(np.sqrt(np.sum(ols_lsdv.resid**2) / ols_lsdv.df_resid))\n",
+    "se_cons = sigma_e / np.sqrt(G)\n",
+    "\n",
+    "# Estadísticos de _cons con df de residuo del LSDV\n",
+    "df_resid = int(ols_lsdv.df_resid)\n",
+    "t_cons = cons_stata / se_cons\n",
+    "p_cons = 2 * (1 - tdist.cdf(abs(t_cons), df_resid))\n",
+    "crit = tdist.ppf(0.975, df_resid)  # 95%\n",
+    "ci_cons_low  = cons_stata - crit * se_cons\n",
+    "ci_cons_high = cons_stata + crit * se_cons\n",
+    "\n",
+    "# ---------- 4) Coefs de 'dit' y 'post' directo de LSDV ----------\n",
+    "row_dp = ols_lsdv.summary2().tables[1].loc[[\"dit\",\"post\"]].copy()\n",
+    "row_dp.rename(columns={\n",
+    "    \"Coef.\":\"Coefficient\", \"Std.Err.\":\"Std. Err.\", \"t\":\"T-stat\",\n",
+    "    \"P>|t|\":\"P-value\", \"[0.025\":\"Lower CI\", \"0.975]\":\"Upper CI\"\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# Armo tabla final con _cons (centrado) + dit + post\n",
+    "tab_final = pd.DataFrame({\n",
+    "    \"Coefficient\": [cons_stata, row_dp.loc[\"dit\",\"Coefficient\"], row_dp.loc[\"post\",\"Coefficient\"]],\n",
+    "    \"Std. Err.\":   [se_cons,    row_dp.loc[\"dit\",\"Std. Err.\"],   row_dp.loc[\"post\",\"Std. Err.\"]],\n",
+    "    \"T-stat\":      [t_cons,     row_dp.loc[\"dit\",\"T-stat\"],      row_dp.loc[\"post\",\"T-stat\"]],\n",
+    "    \"P-value\":     [p_cons,     row_dp.loc[\"dit\",\"P-value\"],     row_dp.loc[\"post\",\"P-value\"]],\n",
+    "    \"Lower CI\":    [ci_cons_low,row_dp.loc[\"dit\",\"Lower CI\"],    row_dp.loc[\"post\",\"Lower CI\"]],\n",
+    "    \"Upper CI\":    [ci_cons_high,row_dp.loc[\"dit\",\"Upper CI\"],   row_dp.loc[\"post\",\"Upper CI\"]],\n",
+    "}, index=[\"_cons\",\"dit\",\"post\"])\n",
+    "\n",
+    "print(\"=== Fixed Effects (within) — LSDV (statsmodels, constante centrada como Stata) ===\")\n",
+    "print(tab_final)\n",
+    "\n",
+    "# ---------- 5) R² (within) al estilo Stata ----------\n",
+    "# R2_within = 1 - SSE_within / SST_within, con variables centradas por entidad\n",
+    "g = d.groupby(\"i\", as_index=False)\n",
+    "y_within = d[\"y\"] - g[\"y\"].transform(\"mean\")\n",
+    "X_within = d[[\"dit\",\"post\"]] - g[[\"dit\",\"post\"]].transform(\"mean\")\n",
+    "\n",
+    "ols_within = sm.OLS(y_within, X_within).fit()\n",
+    "SSE_within = float(np.sum(ols_within.resid**2))\n",
+    "SST_within = float(np.sum((y_within - y_within.mean())**2))\n",
+    "R2_within = 1.0 - SSE_within / SST_within if SST_within > 0 else np.nan\n",
+    "print(f\"\\nR² (within): {R2_within:.10f}\")\n",
+    "\n",
+    "# ---------- 6) F test that all u_i = 0 (poolability) ----------\n",
+    "# Test conjunto: todos los coeficientes de C(i)[T.*] = 0\n",
+    "fe_cols = [c for c in X_lsdv.columns if c.startswith(\"C(i)[T.\")]\n",
+    "if fe_cols:\n",
+    "    R = np.zeros((len(fe_cols), X_lsdv.shape[1]))\n",
+    "    col_index = {c: j for j, c in enumerate(X_lsdv.columns)}\n",
+    "    for r, col in enumerate(fe_cols):\n",
+    "        R[r, col_index[col]] = 1.0\n",
+    "    ftest = ols_lsdv.f_test(R)\n",
+    "    stat = float(getattr(ftest, \"fvalue\", getattr(ftest, \"statistic\", np.nan)))\n",
+    "    pval = float(ftest.pvalue)\n",
+    "    df_num = len(fe_cols)\n",
+    "    df_denom = int(ols_lsdv.df_resid)\n",
+    "    print(\"\\nF-test that all u_i = 0 (poolability):\")\n",
+    "    print(f\"F({df_num}, {df_denom}) = {stat:.4f}   P-value = {pval:.4f}\")\n",
+    "else:\n",
+    "    print(\"\\n(No se detectaron columnas C(i) para el F-test).\")\n",
+    "\n",
+    "# ---------- 7) Resumen rápido estilo Stata ----------\n",
+    "n = len(d)\n",
+    "Tbar = n / G\n",
+    "print(\"\\nResumen rápido:\")\n",
+    "print(f\"Obs = {n} | Grupos (i) = {G} | Obs/grupo (avg) = {Tbar:.1f}\")\n",
+    "print(f\"F(modelo within; 2, {int(ols_within.df_resid)}) = {float(ols_within.fvalue):.4f}   Prob > F = {float(ols_within.f_pvalue):.4f}\")\n"
    ]
   }
  ],
